allow opening files in hex editor from file tree

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
       "dump"
   ],
   "activationCommands": {
-    "atom-workspace": "hix:toggle"
+    "atom-workspace": ["hix:toggle", "hix:open"]
   },
   "repository": "https://github.com/qix-/hix",
   "license": "MIT",
